corrigindo bugs